<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProblemasActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="32dp">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="346dp"
                android:layout_height="38dp"
                android:layout_marginBottom="16dp"
                android:text="@string/principaisProblemas"
                android:textAlignment="center"
                android:textSize="28sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/saude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saude" />

            <CheckBox
                android:id="@+id/violenciaSegurancaPublica"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/viole" />

            <CheckBox
                android:id="@+id/economiaInflacao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/eco" />

            <CheckBox
                android:id="@+id/educacao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/edu" />

            <CheckBox
                android:id="@+id/corrupcao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/corru" />

            <CheckBox
                android:id="@+id/desemprego"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/desemp" />

            <CheckBox
                android:id="@+id/fomePobreza"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/fome" />

            <CheckBox
                android:id="@+id/desiquidadeSocial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/desiso" />

            <CheckBox
                android:id="@+id/maAdmin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/maadm" />

            <CheckBox
                android:id="@+id/salario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="32dp"
                android:text="@string/salario" />

            <Button
                android:id="@+id/btConfirmar"
                android:layout_width="248dp"
                android:layout_height="65dp"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="#2D3094"
                android:text="@string/confirmar"
                android:textSize="24sp"
                app:cornerRadius="10dp" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>