<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DadosEntrevistadoActivity">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="62dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="61dp"
        android:text="@string/dadosEntrevistados"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.562"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_nome"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="104dp"
        android:background="@drawable/edittext_borda"
        android:hint="@string/seuNome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <EditText
        android:id="@+id/et_numero"
        android:layout_width="196dp"
        android:layout_height="51dp"
        android:layout_marginStart="104dp"
        android:background="@drawable/edittext_borda"
        android:hint="@string/digiteTelefone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="76dp"
        android:text="@string/nome"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="36dp"
        android:text="@string/telefone"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_nome" />

    <Button
        android:id="@+id/btFinalizar"
        android:layout_width="248sp"
        android:layout_height="65sp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="60dp"
        android:backgroundTint="#2D9443"
        android:text="@string/btFinalizar"
        android:textSize="24sp"
        app:cornerRadius="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_numero" />


</androidx.constraintlayout.widget.ConstraintLayout>