<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EstimuladaActivity">

    <LinearLayout
        android:id="@+id/candidatoMew"
        android:layout_width="410dp"
        android:layout_height="100dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/candidatoBulbassauro">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="65dp"
            android:contentDescription="@string/mew"
            android:scaleType="centerCrop"
            android:src="@drawable/mew" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/mew"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/candidatoPikachu"
        android:layout_width="410dp"
        android:layout_height="100dp"
        android:layout_marginStart="1dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/candidatoCharmander">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="65dp"
            android:contentDescription="@string/pikachu"
            android:scaleType="centerCrop"
            android:src="@drawable/bonechu" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/pikachu"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardCandidatoUm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="12dp"
        app:cardElevation="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@android:color/transparent"
        app:strokeWidth="2dp">

        <LinearLayout
            android:layout_width="410dp"
            android:layout_height="100dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="12dp">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="65dp"
                android:contentDescription="@string/squirtle"
                android:scaleType="centerCrop"
                android:src="@drawable/squirtle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/squirtle"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:id="@+id/candidatoCharmander"
        android:layout_width="410dp"
        android:layout_height="100dp"
        android:layout_marginStart="4dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardCandidatoUm">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="65dp"
            android:contentDescription="@string/charmander"
            android:scaleType="centerCrop"
            android:src="@drawable/charmander" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/charmander"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/candidatoBulbassauro"
        android:layout_width="410dp"
        android:layout_height="100dp"
        android:layout_marginTop="1dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/candidatoPikachu">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="65dp"
            android:contentDescription="@string/bulbassauro"
            android:scaleType="centerCrop"
            android:src="@drawable/bulbassauro" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/bulbassauro"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <RadioGroup
        android:id="@+id/radioGroupOpcoes"
        android:layout_width="406dp"
        android:layout_height="125dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="7dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/candidatoMew">

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:text="@string/branco" />

        <RadioButton
            android:id="@+id/radioButton5"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/nulo" />

        <RadioButton
            android:id="@+id/radioButton6"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/naoSei" />

    </RadioGroup>

    <Button
        android:id="@+id/btConfirmarEstimulada"
        android:layout_width="165dp"
        android:layout_height="65dp"
        android:layout_marginStart="123dp"
        android:backgroundTint="#2D3094"
        android:text="@string/confirmar"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupOpcoes" />

</androidx.constraintlayout.widget.ConstraintLayout>