<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/usuario"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:layout_marginStart="100dp"
        android:background="@drawable/edittext_borda"
        android:hint="@string/user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/senha"
        android:layout_width="210dp"
        android:layout_height="52dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="1dp"
        android:background="@drawable/edittext_borda"
        android:hint="@string/sen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/acessar"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#2B527E"
        android:text="@string/btAcessar"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/senha" />

    <Button
        android:id="@+id/finalizar"
        android:layout_width="119dp"
        android:layout_height="65dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#2D5685"
        android:text="@string/btSair"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:layout_constraintStart_toEndOf="@+id/acessar"
        app:layout_constraintTop_toBottomOf="@+id/senha" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="31dp"
        android:text="@string/sen"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usuario" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:text="@string/user"
        android:textColorLink="#3D498A"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="350dp"
        android:layout_height="267dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="31dp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pokemoin" />

</androidx.constraintlayout.widget.ConstraintLayout>